mdapipkg/unpackaged/objects/Music__c.object
<CustomObject>
    <description>Musical pieces</description>
    <fields>
        <fullName>Arranger__c</fullName>
        <description>Name of Arranger</description>
        <inlineHelpText>Name of Arranger</inlineHelpText>
        <label>Arranger</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Composer__c</fullName>
        <description>Name of composer</description>
        <inlineHelpText>Name of composer</inlineHelpText>
        <label>Composer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Concert__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Latest Concert when Music was performed</description>
        <inlineHelpText>Latest Concert when Music was performed</inlineHelpText>
        <label>Most Recent Concert</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Music</relationshipLabel>
        <relationshipName>Music</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RecordingLink__c</fullName>
        <description>Link to a recording of this musical piece.</description>
        <inlineHelpText>Link to a recording of this musical piece.</inlineHelpText>
        <label>Recording Link</label>
        <type>Url</type>
    </fields>
    <label>Music</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Music Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Music</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Arranger_Needs_Composer</fullName>
        <active>true</active>
        <description>Must have Composer if Arrange exists.</description>
        <errorConditionFormula>ISBLANK( Composer__c ) &amp;&amp;
NOT ISBLANK( Arranger__c )</errorConditionFormula>
        <errorDisplayField>Composer__c</errorDisplayField>
        <errorMessage>Whoops! You really need the Composer if you filled in the Arranger field. Or fire the Arranger, your choice.</errorMessage>
    </validationRules>
</CustomObject>